--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
 
                 <header>
 
-                    <div class="versionEn">
-                        <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-flag-usa"></i></a>
-                    </div><!--versionEn-->
-
                     <div class="logo">
                         <h1><a href="./index.html" target="_blank" rel="noopener noreferrer"><img src="./imgs/logo-GPQIT-anim.gif" alt=""></a></h1>
                         <div class="list-mobile">
@@ -58,6 +54,9 @@
                     <!--clear-->
                 </header>
 
+                <div class="versionEn">
+                    <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer">Versão em ingles</a>
+                </div><!--versionEn-->
 
             <div class="content">
                 <div class="prof">
