--- a/members.html
+++ b/members.html
@@ -30,9 +30,6 @@
     <!--single-all-->
 
     <header>
-      <div class="versionEn">
-        <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-flag-usa"></i></a>
-    </div><!--versionEn-->
       <div class="logo">
         <h1>
           <a href="./index.html" target="_blank" rel="noopener noreferrer"
@@ -133,6 +130,10 @@
       <div class="clear"></div>
       <!--clear-->
     </header>
+
+    <div class="versionEn">
+      <a href="https://joao-code-web.github.io/professorEn/members.html" target="_blank" rel="noopener noreferrer">Versão em ingles</a>
+  </div><!--versionEn-->
 
     <div class="content">
       <div class="members-detalhes">
