--- a/collaborations.html
+++ b/collaborations.html
@@ -17,9 +17,6 @@
 
   <body>
     <header>
-      <div class="versionEn">
-        <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-flag-usa"></i></a>
-    </div><!--versionEn-->
       <div class="logo">
         <h1>
           <a href="./index.html" target="_blank" rel="noopener noreferrer"
@@ -62,6 +59,10 @@
       <div class="clear"></div>
       <!--clear-->
     </header>
+
+    <div class="versionEn">
+      <a href="https://joao-code-web.github.io/professorEn/collaborations.html" target="_blank" rel="noopener noreferrer">Versão em ingles</a>
+  </div><!--versionEn-->
 
     <main class="cont">
       <div class="collaborations">
