--- a/publications.html
+++ b/publications.html
@@ -17,47 +17,116 @@
 
   <body>
     <header>
-      <div class="versionEn">
-        <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-flag-usa"></i></a>
-    </div><!--versionEn-->
       <div class="logo">
-          <h1><a href="./index.html" target="_blank" rel="noopener noreferrer"><img src="./imgs/logo-GPQIT-anim.gif" alt=""></a></h1>
-          <div class="list-mobile">
-              <i class="fas fa-bars"></i>
-          </div>
-          <!--list-mobile-->
+        <h1>
+          <a href="./index.html" target="_blank" rel="noopener noreferrer"
+            ><img src="./imgs/logo-GPQIT-anim.gif" alt=""
+          /></a>
+        </h1>
+        <div class="list-mobile">
+          <i class="fas fa-bars"></i>
+        </div>
+        <!--list-mobile-->
       </div>
       <!--logo-->
 
       <nav class="desktop">
-          <ul>
-            <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Pesquisa</a></li>
-            <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publicações</a></li>
-            <li><a href="./news.html" target="_blank" rel="noopener noreferrer">Noticias</a>
-            </li>
-            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Colaborações</a></li>
-            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Membros</a></li>
-            <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contato</a></li>
-          </ul>
+        <ul>
+          <li>
+            <a href="./research.html" target="_blank" rel="noopener noreferrer"
+              >Pesquisa</a
+            >
+          </li>
+          <li>
+            <a
+              href="./publications.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Publicações</a
+            >
+          </li>
+          <li>
+            <a href="./news.html" target="_blank" rel="noopener noreferrer"
+              >Noticias</a
+            >
+          </li>
+          <li>
+            <a
+              href="./collaborations.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Colaborações</a
+            >
+          </li>
+          <li>
+            <a href="./members.html" target="_blank" rel="noopener noreferrer"
+              >Membros</a
+            >
+          </li>
+          <li>
+            <a href="./contact.html" target="_blank" rel="noopener noreferrer"
+              >Contato</a
+            >
+          </li>
+        </ul>
       </nav>
       <!--desktop-->
 
       <nav class="mobile" id="mobile">
-          <ul>
-            <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Pesquisa</a></li>
-            <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publicações</a></li>
-            <li><a href="./news.html" target="_blank" rel="noopener noreferrer">Noticias</a>
-            </li>
-            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Colaborações</a></li>
-            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Membros</a></li>
-            <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contato</a></li>
-          </ul>
+        <ul>
+          <li>
+            <a href="./research.html" target="_blank" rel="noopener noreferrer"
+              >Pesquisa</a
+            >
+          </li>
+          <li>
+            <a
+              href="./publications.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Publicações</a
+            >
+          </li>
+          <li>
+            <a href="./news.html" target="_blank" rel="noopener noreferrer"
+              >Noticias</a
+            >
+          </li>
+          <li>
+            <a
+              href="./collaborations.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Colaborações</a
+            >
+          </li>
+          <li>
+            <a href="./members.html" target="_blank" rel="noopener noreferrer"
+              >Membros</a
+            >
+          </li>
+          <li>
+            <a href="./contact.html" target="_blank" rel="noopener noreferrer"
+              >Contato</a
+            >
+          </li>
+        </ul>
       </nav>
       <!--mobile-->
 
       <div class="clear"></div>
       <!--clear-->
-  </header>
+    </header>
+
+    <div class="versionEn">
+      <a
+        href="https://joao-code-web.github.io/professorEn/publications.html"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Versão em ingles</a
+      >
+    </div>
+    <!--versionEn-->
 
     <div class="content">
       <div class="publications">
@@ -127,52 +196,54 @@
     </div>
     <!--content-->
 
-    
     <footer>
       <div class="footer-singles">
-          <div class="locali-footer">
-              <h1>Localização</h1>
+        <div class="locali-footer">
+          <h1>Localização</h1>
 
-              <p>Universidade Federal de Minas Gerais, Departamento de Química - ICEx 
-                  Setor  Inorgânica.</p>
+          <p>
+            Universidade Federal de Minas Gerais, Departamento de Química - ICEx
+            Setor Inorgânica.
+          </p>
 
-              <p>31.270-901 Belo Horizonte - MG
-                  Brasil</p>
-              <p>Telefone: (88) 34236962</p>
-              <p>Fax: (88) 34236963</p>
-              <a href="./contact.html" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
-          </div>
-          <!--locali-footer-->
+          <p>31.270-901 Belo Horizonte - MG Brasil</p>
+          <p>Telefone: (88) 34236962</p>
+          <p>Fax: (88) 34236963</p>
+          <a href="./contact.html" target="_blank" rel="noopener noreferrer"
+            >Clique aqui para mais informações</a
+          >
+        </div>
+        <!--locali-footer-->
       </div>
       <!--footer-singles-->
       <div class="footer-singles">
-          <div class="infor-footer">
-              <h1>Noticas mais recentes</h1>
+        <div class="infor-footer">
+          <h1>Noticas mais recentes</h1>
 
-              <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
-              <span>16/09/1111</span>
+          <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
+          <span>16/09/1111</span>
 
-              <div class="traco"></div>
+          <div class="traco"></div>
 
-              <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
-              <span>16/09/1111</span>
+          <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
+          <span>16/09/1111</span>
 
-              <a href="./news.html" target="_blank" rel="noopener noreferrer">
-                Veja todas as Noticas</a
-              >
-          </div>
-          <!--infor-footer-->
+          <a href="./news.html" target="_blank" rel="noopener noreferrer">
+            Veja todas as Noticas</a
+          >
+        </div>
+        <!--infor-footer-->
       </div>
       <!--footer-singles-->
 
       <div class="footer-singles">
-          <div class="logo-footer">
-              <img src="./imgs/logo-GPQIT-anim.gif" alt="">
-          </div>
-          <!--logo-footer-->
+        <div class="logo-footer">
+          <img src="./imgs/logo-GPQIT-anim.gif" alt="" />
+        </div>
+        <!--logo-footer-->
       </div>
       <!--footer-singles-->
-  </footer>
+    </footer>
     <script src="./scripts/heade.js"></script>
   </body>
 </html>
