--- a/research.html
+++ b/research.html
@@ -17,9 +17,6 @@
 
   <body>
     <header>
-      <div class="versionEn">
-        <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-flag-usa"></i></a>
-    </div><!--versionEn-->
       <div class="logo">
           <h1><a href="./index.html" target="_blank" rel="noopener noreferrer"><img src="./imgs/logo-GPQIT-anim.gif" alt=""></a></h1>
           <div class="list-mobile">
@@ -59,6 +56,9 @@
       <!--clear-->
   </header>
 
+  <div class="versionEn">
+    <a href="https://joao-code-web.github.io/professorEn/research.html" target="_blank" rel="noopener noreferrer">Versão em ingles</a>
+</div><!--versionEn-->
 
     <div class="content">
       <div class="research">
