Mudança dos nomes no link

--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
         href="https://joao-code-web.github.io/professorEn/contact.html"
         target="_blank"
         rel="noopener noreferrer"
-        >Versão em ingles</a
+        >English Version</a
       >
     </div>
     <!--versionEn-->
