--- a/news.html
+++ b/news.html
@@ -61,7 +61,7 @@
     </header>
 
     <div class="versionEn">
-      <a href="https://joao-code-web.github.io/professorEn/news.html" target="_blank" rel="noopener noreferrer">Versão em ingles</a>
+      <a href="https://joao-code-web.github.io/professorEn/news.html" target="_blank" rel="noopener noreferrer">English Version</a>
   </div><!--versionEn-->
 
     <div class="content">
