--- a/publications.html
+++ b/publications.html
@@ -123,7 +123,7 @@
         href="https://joao-code-web.github.io/professorEn/publications.html"
         target="_blank"
         rel="noopener noreferrer"
-        >Versão em ingles</a
+        >English Version</a
       >
     </div>
     <!--versionEn-->
