Alteração do link

--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
 
     <div class="versionEn">
       <a
-        href="https://joao-code-web.github.io/professorEn/contact.html"
+        href="https://joao-code-web.github.io/professorEngl/contact.html"
         target="_blank"
         rel="noopener noreferrer"
         >English Version</a
