--- a/members.html
+++ b/members.html
@@ -132,7 +132,7 @@
     </header>
 
     <div class="versionEn">
-      <a href="https://joao-code-web.github.io/professorEn/members.html" target="_blank" rel="noopener noreferrer">English Version</a>
+      <a href="https://joao-code-web.github.io/professorEngl/members.html" target="_blank" rel="noopener noreferrer">English Version</a>
   </div><!--versionEn-->
 
     <div class="content">
