--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
   </header>
 
   <div class="versionEn">
-    <a href="https://joao-code-web.github.io/professorEn/research.html" target="_blank" rel="noopener noreferrer">English Version</a>
+    <a href="https://joao-code-web.github.io/professorEngl/research.html" target="_blank" rel="noopener noreferrer">English Version</a>
 </div><!--versionEn-->
 
     <div class="content">
