--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </header>
 
                 <div class="versionEn">
-                    <a href="https://joao-code-web.github.io/professorEn/" target="_blank" rel="noopener noreferrer">English Version</a>
+                    <a href="https://joao-code-web.github.io/professorEngl/" target="_blank" rel="noopener noreferrer">English Version</a>
                 </div><!--versionEn-->
 
             <div class="content">
